// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no substitution template literal success 1`] = `
"import * as styled from 'styled';

const Foo = styled.div\`
display: flex;
\`;

export default Foo;
"
`;

exports[`substitution template literal should override static string in tail of last template 1`] = `
"import * as styled from 'styled';

const Foo = styled.div\`  color: red;
  display: \${props => (props.foo ? 'flex' : 'block' && true)};
  \${props => props.bar && 'cursor: pointer;'}
  display: flex;
\`;

export default Foo;
"
`;
